--- a/public/progrative/basic/level1-4/assets/css/style.css
+++ b/public/progrative/basic/level1-4/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Montserrat', 'Noto Sans', sans-serif;
+  font-family: "Montserrat", "Noto Sans", sans-serif;
   color: #3f3f3f;
   background-color: #f8f8f8;
 }
@@ -10,11 +10,11 @@ img {
 }
 
 .font-noto {
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
 }
 
 .font-roboto {
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
 .link-parent.on .link-mark:before {
@@ -30,7 +30,7 @@ img {
   height: 15px;
 }
 .link-mark:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   right: 0;
@@ -41,7 +41,7 @@ img {
   transition: 0.3s;
 }
 .link-mark:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 50%;
@@ -52,8 +52,7 @@ img {
   transition: 0.3s;
 }
 @media screen and (min-width: 640px) {
-  .link-mark:before,
-  .link-mark:after {
+  .link-mark:before, .link-mark:after {
     content: unset;
   }
 }
@@ -67,7 +66,7 @@ img {
   position: relative;
 }
 .hover-dot:after {
-  content: '';
+  content: "";
   position: absolute;
   width: 4px;
   height: 4px;
@@ -106,7 +105,7 @@ footer > div {
   align-items: center;
   font-size: 12px;
   color: #7e7e7e;
-  font-family: 'Noto Sans JP';
+  font-family: "Noto Sans JP";
   font-weight: bold;
 }
 
@@ -161,7 +160,7 @@ footer > div {
   color: #4d4d4d;
   background-color: #fff;
   font-weight: bold;
-  font-family: 'Noto Sans JP';
+  font-family: "Noto Sans JP";
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -282,7 +281,7 @@ footer > div {
   border-bottom: 1px #d9d9d9 solid;
   display: flex;
   align-items: center;
-  font-family: 'Noto Sans JP';
+  font-family: "Noto Sans JP";
   gap: 40px;
 }
 .news__listData {
@@ -538,4 +537,4 @@ footer > div {
   .links__copyright a {
     font-size: 12px;
   }
-} /*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
