--- a/public/progrative/advanced/level2/assets/css/style.css
+++ b/public/progrative/advanced/level2/assets/css/style.css
@@ -60,29 +60,11 @@ main .main__container {
   align-items: center;
   width: 100%;
 }
-main .main__lists {
-  display: flex;
-  gap: 60px;
-  margin-top: 120px;
-}
-main .main_flex {
-  width: calc(50% - 30px);
-}
 main .main__descBlock {
   height: 0;
   overflow: hidden;
   transition: 0.3s;
   opacity: 0;
-}
-main .main__list {
-  overflow: hidden;
-  transition: 0.3s;
-}
-main .main__list.on .main__descBlock {
-  opacity: 1;
-}
-main .main__list.on .main__triangle {
-  transform: rotate(180deg);
 }
 main .main__listHeader {
   display: flex;
@@ -125,6 +107,29 @@ main .main__listDesc {
   padding: 24px 17px 24px 39px;
   border-bottom: 3px solid #3f3f3f;
 }
+main .main__SP {
+  display: block;
+  text-align: center;
+}
+main .main__lists {
+  flex-direction: column;
+  gap: 0;
+  margin-top: 120px;
+  display: flex;
+}
+main .main__flex {
+  width: 100%;
+}
+main .main__list {
+  overflow: hidden;
+  transition: 0.3s;
+}
+main .main__list.on .main__descBlock {
+  opacity: 1;
+}
+main .main__list.on .main__triangle {
+  transform: rotate(180deg);
+}
 main .main__catch {
   text-align: center;
   font-family: "Roobto";
@@ -133,14 +138,11 @@ main .main__catch {
   font-size: 24px;
   line-height: 28px;
   margin-top: 80px;
-  position: fixed;
   bottom: 120px;
   left: 0;
   width: 100%;
-}
-main .main__SP {
-  display: block;
-  text-align: center;
+  position: static;
+  margin-bottom: 120px;
 }
 
 footer {
@@ -162,8 +164,20 @@ footer {
   header {
     padding: 55.8px 30px 0;
   }
+  main .main__lists {
+    gap: 60px;
+    flex-direction: row;
+  }
+  main .main__flex {
+    width: calc(50% - 30px);
+  }
   main .main__list {
     max-width: 560px;
+    margin: 0 auto;
+  }
+  main .main__catch {
+    position: fixed;
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1440px) {
