--- a/public/progrative/advanced/level2/assets/css/style.scss
+++ b/public/progrative/advanced/level2/assets/css/style.scss
@@ -65,38 +65,11 @@ main {
       width: 100%;
     }
 
-    &__lists {
-      display: flex;
-      gap: 60px;
-      margin-top: 120px;
-    }
-
-    &_flex {
-      width: calc(50% - 30px);
-    }
-
     &__descBlock {
       height: 0;
       overflow: hidden;
       transition: 0.3s;
       opacity: 0;
-    }
-
-    &__list {
-      overflow: hidden;
-      transition: 0.3s;
-
-      &.on {
-        .main {
-          &__descBlock {
-            opacity: 1;
-          }
-
-          &__triangle {
-            transform: rotate(180deg);
-          }
-        }
-      }
     }
 
     &__listHeader {
@@ -147,6 +120,39 @@ main {
       border-bottom: 3px solid #3f3f3f;
     }
 
+    &__SP {
+      display: block;
+      text-align: center;
+    }
+
+    &__lists {
+      flex-direction: column;
+      gap: 0;
+      margin-top: 120px;
+      display: flex;
+    }
+
+    &__flex {
+      width: 100%;
+    }
+
+    &__list {
+      overflow: hidden;
+      transition: 0.3s;
+
+      &.on {
+        .main {
+          &__descBlock {
+            opacity: 1;
+          }
+
+          &__triangle {
+            transform: rotate(180deg);
+          }
+        }
+      }
+    }
+
     &__catch {
       text-align: center;
       font-family: "Roobto";
@@ -155,15 +161,11 @@ main {
       font-size: 24px;
       line-height: 28px;
       margin-top: 80px;
-      position: fixed;
       bottom: 120px;
       left: 0;
       width: 100%;
-    }
-
-    &__SP {
-      display: block;
-      text-align: center;
+      position: static;
+      margin-bottom: 120px;
     }
   }
 }
@@ -190,13 +192,6 @@ footer {
 
   main {
     .main {
-      // &__container {
-      //   display: block;
-      // }
-
-      // &__SP {
-      //   display: none;
-      // }
     }
   }
 }
@@ -210,10 +205,22 @@ footer {
   main {
     .main {
       &__lists {
+        gap: 60px;
+        flex-direction: row;
+      }
+
+      &__flex {
+        width: calc(50% - 30px);
       }
 
       &__list {
         max-width: 560px;
+        margin: 0 auto;
+      }
+
+      &__catch {
+        position: fixed;
+        margin-bottom: 0;
       }
     }
   }
